--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ rvm:
 #before_script:
 # - chmod +x ./script/cibuild # or do this locally and commit
 before_script:
-  - pip install html5validator
+  - pip install --user html5validator
 
 # Assume bundler is being used, therefore
 # the `install` step will run `bundle install` by default.
