--- a/.travis.yml
+++ b/.travis.yml
@@ -1,23 +1,17 @@
 language: ruby
 rvm:
 - 2.1
-
-#before_script:
-# - chmod +x ./script/cibuild # or do this locally and commit
 before_script:
-  - pip install --user html5validator
-
-# Assume bundler is being used, therefore
-# the `install` step will run `bundle install` by default.
+- pip install --user html5validator
 script: ./script/cibuild
-
-# branch whitelist, only for GitHub Pages
 branches:
   only:
   - master
-#  - gh-pages     # test the gh-pages branch
-#  - /pages-(.*)/ # test every branch which starts with "pages-"
-
 env:
   global:
-  - NOKOGIRI_USE_SYSTEM_LIBRARIES=true # speeds up installation of html-proofer
+  - NOKOGIRI_USE_SYSTEM_LIBRARIES=true
+deploy:
+  provider: script
+  script: ./script/deploy.sh
+  on:
+    branch: master
