Update build script.

--- a/script/build
+++ b/script/build
@@ -9,6 +9,9 @@ if command -v python >/dev/null 2>&1; then
   PYTHONPATH="$(python -m site --user-base)"
 fi
 
+command -v $RUBYPATH/bin/bundle >/dev/null 2>&1  \
+  || gem install --user-install bundler
+
 command -v $RUBYPATH/bin/jekyll >/dev/null 2>&1  \
   || gem install --user-install jekyll
 
@@ -20,6 +23,7 @@ command -v $PYTHONPATH/bin/html5validator >/dev/null 2>&1 \
 
 bundle exec $RUBYPATH/bin/jekyll build
 $PYTHONPATH/bin/html5validator --root ./_site
-bundle exec $RUBYPATH/bin/htmlproof ./_site --disable-external
+echo "skipping htmlproof until fixed in El Capitan"
+#bundle exec $RUBYPATH/bin/htmlproof ./_site --disable-external
 (sleep 3; open http://127.0.0.1:4000) &
 bundle exec jekyll serve
