--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ rvm:
 - 2.1
 before_script:
 - pip install --user html5validator
-- npm install git+https://github.com/strategicdata/a11y.git#feature-cli-exit-codes
+- npm install --user ally 
 script: ./script/cibuild
 branches:
   only:
