--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,20 @@
 language: ruby
+cache:
+  - bundler
+  - pip
 rvm:
   - 2.1
 jdk:
   - oraclejdk8
 before_script:
   - pip install --user html5validator
-  - npm install a11y
 script: ./script/cibuild
 branches:
   only:
-    - master
+  - master
 env:
   global:
-    - NOKOGIRI_USE_SYSTEM_LIBRARIES=true
+  - NOKOGIRI_USE_SYSTEM_LIBRARIES=true
 deploy:
   provider: script
   script: ./script/deploy
