--- a/.gitignore
+++ b/.gitignore
@@ -5,8 +5,8 @@ node_modules/
 _site/
 .sass-cache/
 .travis/deploy_key
+.jekyll-cache
 css/ws-main.css
 css/ws-main.css.min.map
 minjs/ws-main.js
 minjs/ws-main.js.min.map
-
